--- a/index.html
+++ b/index.html
@@ -7,5 +7,16 @@
         <title>detect-user-browser</title>
         <link rel="stylesheet" href="style.css" />
     </head>
-    <body></body>
+    <body>
+        <div class="wrapper">
+            <h2>Browser:</h2>
+            <div class="logos">
+                <img class="chrome" src="./logos/chrome.png" alt="chrome" title="Google chrome" />
+                <img class="firefox" src="./logos/firefox.png" alt="firefox" title="Mozilla Firefox" />
+                <img class="edge" src="./logos/edge.png" alt="edge" title="Microsoft Edge" />
+                <img class="opera" src="./logos/opera.png" alt="opera" title="Opera" />
+                <img class="safari" src="./logos/safari.png" alt="safari" title="Apple Safari" />
+            </div>
+        </div>
+    </body>
 </html>
