--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@
                 <img class="safari" src="./logos/safari.png" alt="safari" title="Apple Safari" />
             </div>
         </div>
+
+        <script src="./script.js"></script>
     </body>
 </html>
